# modern_cpp_course

./: .gitignore  CMakeLists.txt  README.md
include/: FuncPtrParam.hpp  Main.hpp  StringLib.hpp  config.hpp.in
src/: CMakeLists.txt  FuncPtrParam.cpp  Main.cpp  StringLib.cpp  main.cpp
